.ankra/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcdonald-web
  labels:
    app.kubernetes.io/name: mcdonald-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mcdonald-web
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
