.ankra/manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mcdonald-web
  labels:
    app.kubernetes.io/name: mcdonald-web
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mcdonald-web
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
    - ports:
        - port: 5000
          protocol: TCP
